--- a/Dinh_Quang_Anh.html
+++ b/Dinh_Quang_Anh.html
@@ -5,9 +5,14 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <style>
+        body{
+            background-color: lightpink;
+        }
+    </style>
     <title>Đinh Quang Anh</title>
 </head>
-<body bgcolor="#ffb6c1">
+<body>
     <h1>Bài Giới Thiệu Của Quang Anh</h1>
         <div>
             <p>Xin Chào các bạn.<br>
@@ -27,15 +32,17 @@
         <p>Tên đầy đủ của mình là <strong>Đinh Quang Anh</strong>, năm nay 22 tuổi.<br>
             Biệt danh mà bạn bè đặt cho mình là AnhJenda. Nghe có vẻ khá tây, nhưng đọc
             ngược lại thì các bạn sẽ thấy nó là Anh Da Đen :'(.<br>
-            Vì Jenda quá nên mình sẽ không up ảnh, thay bằng cái ảnh minh hoạ vậy:<br>
+            Vì da đen quá nên mình sẽ không up ảnh, thay bằng cái ảnh minh hoạ vậy:<br>
             <img src=".img/AnhJenda.jpg" width="320"  height="400" alt="Chân dung Quang Anh"/>
         </p>
     </div>
     <div>
     <h3>2. Quê quán</h3>
-        <p>Mình đến từ <strong>Ninh Bình</strong>, nơi nổi tiếng với đặc sản dê núi đá, gà chạy đồi, rượu Kim Sơn.<br>
-            Ninh Bình cũng là vùng đất có nhiều danh lam thắng cảnh, điểm du lịch, khu vui chơi như:
-        </p>
+        <p>Mình đến từ <strong>Ninh Bình</strong>, vùng đất quê hương của <strong>ĐINH TIÊN HOÀNG</strong>-Người đã đứng ra
+            dẹp loạn 12 sứ quân, đưa đất nước trở lại cảnh thái bình, ấm no. Đồng thời cũng là quê hương của <strong>
+            Cố Chủ Tịch Nước TRẦN ĐẠI QUANG</strong>. Vì là vùng đất địa linh nhân kiệt, gắn liền với tên tuổi của những
+            nhân vật lịch sử nên <strong>Ninh Bình</strong> cũng có rất nhiều khu di tích lịch sử, địa điểm tham quan, ví dụ
+            như một số địa điểm sau:</p>
         <ul style="list-style-type: square;">
             <li>
                 <a href="https://vi.wikipedia.org/wiki/C%E1%BB%91_%C4%91%C3%B4_Hoa_L%C6%B0" target="_blank">Cố Đô Hoa Lư</a>
@@ -51,12 +58,23 @@
             </li>
         </ul>
         <p>
+            Ngoài ra mình các cặp đôi về thăm <strong>Ninh Bình</strong> thì có thể đi chơi ở <strong>Tuyệt Tình Cốc</strong>.<br>
+            Nghe tên thì thế nhưng đảm bảo đi về cặp nào mới đang friendzone thì chuyển sang yêu nhau luôn, mà cặp nào đang yêu
+            thì 90% là cưới.
+            <figure>
+                <img src=".img/tuyet_tinh_coc.jpg">
+                <figcaption>Tuyệt tình cốc nhìn từ trên cao(sưu tầm)</figcaption>
+
+            </figure>
+        </p>
+        <p>
+            <strong>Ninh Bình</strong> cũng nổi tiếng với đặc sản <em>dê núi đá, gà chạy đổi và rượu Kim Sơn,...</em>
             Nếu có cơ hội các bạn hãy đến thăm quê mình một lần, đảm bảo vui quên lối về luôn.
         </p>
     </div>
     <div>
     <h3>3. Sở thích</h3>
-        <p>Mình thích xem phim,nghe nhạc,đọc truyện và chơi game.</p>
+        <p>Sở thích của mình là xem phim,nghe nhạc,đọc truyện và chơi game.</p>
         <p>
             Mình là fan cứng của web <a href="https://metruyenchu.com/" target="_blank">Mê Truyện Chữ</a>,
             nơi chứa những bộ truyện kiếm hiệp, tiên hiệp, huyền ảo, tu tiên,...với nhiều tình tiết thú vị.
@@ -67,20 +85,56 @@
             (<a href="https://vi.wikipedia.org/wiki/Katy_Perry" target="_blank">Xem thêm về Katy Perry</a>)
             Bài hát mình thường nghe của cô ấy là bài <strong>ROAR</strong>:
         </p>
-            <iframe src="https://youtube.com/embed/CevxZvSJLk8?control=1" height="280" width="320">
+            <iframe src="https://youtube.com/embed/CevxZvSJLk8?control=1" height="300" width="400">
             </iframe>
+        <p>Mình cũng liệt kê một số bài Hit có nhiều lượt xem của cô ấy trên <em>YouTube</em>, các bạn hứng thú có thể tìm nghe thử.</p>
+        <table border="1" bgcolor="#f5f5dc" width="500">
+            <tr align="center">
+                <th >Tên Hit</th>
+                <th>Năm Phát Hành</th>
+                <th>Lượt Xem</th>
+            </tr>
+            <tr align="center">
+                <td>Firework</td>
+                <td>2010</td>
+                <td>1.3 tỉ</td>
+            </tr>
+            <tr align="center">
+                <td>ROAR</td>
+                <td>2013</td>
+                <td>3.4 tỉ</td>
+            </tr>
+            <tr align="center">
+                <td>Dark Horse</td>
+                <td>2014</td>
+                <td>3.1 tỉ</td>
+            </tr>
+            <tr align="center">
+                <td>Bon Appétit</td>
+                <td>2017</td>
+                <td>1.1 tỉ</td>
+            </tr>
+        </table>
         <p>Game mình thích chơi là League Of Legend. Các bạn nếu hứng thú có thể click vào link phía dưới để tìm hiểu và tải game</p>
         <a href="https://lienminh.garena.vn/">League of Legend</a>
         <p>Mình cũng rất thích động vật, đặc biệt là mèo (có lẽ vì mình tuổi mèo).</p>
         <p>Cùng xem chú mèo mà mình thích nhất nhé =)))</p>
         <img src=".img/Chú%20mèo%20yêu%20thích.jpg" width="240" height="280" alt="Mèo đen yêu thích">
+        <p>Còn đây là đoạn audio mình hay mở khi chơi với nó</p>
+        <audio controls>
+            <source src=".img/Circus10529-VA-5631008.mp3" type="audio/mp3">
+        </audio>
     </div>
     <div>
     <h3>4. Cách thức liên lạc</h3>
         <p>Các bạn nếu có cùng sở thích hay hứng thú với những gì mình chia sẻ phía trên
             thì có thể liên lạc trao đổi với mình qua Facebook:
         </p>
-        <a href="https://www.facebook.com/profile.php?id=100034511581216" target="_blank">Đinh Quang Anh</a>
+        <a href="https://www.facebook.com/profile.php?id=100034511581216" target="_blank">Facebook: Đinh Quang Anh</a>
     </div>
+    <div>
+        <h3>Bài giới thiệu đến đây là hết, cảm ơn Cô Giáo và các bạn đã theo dõi.</h3>
+    </div>
+            <a href="index.html">Quay lại trang chủ</a>
 </body>
 </html>
