--- a/Dinh_Quang_Anh.html
+++ b/Dinh_Quang_Anh.html
@@ -33,7 +33,7 @@
             Biệt danh mà bạn bè đặt cho mình là AnhJenda. Nghe có vẻ khá tây, nhưng đọc
             ngược lại thì các bạn sẽ thấy nó là Anh Da Đen :'(.<br>
             Vì da đen quá nên mình sẽ không up ảnh, thay bằng cái ảnh minh hoạ vậy:<br>
-            <img src=".img/AnhJenda.jpg" width="320"  height="400" alt="Chân dung Quang Anh"/>
+            <img src=".img/images/AnhJenda.jpg" width="320"  height="400" alt="Chân dung Quang Anh"/>
         </p>
     </div>
     <div>
@@ -62,7 +62,7 @@
             Nghe tên thì thế nhưng đảm bảo đi về cặp nào mới đang friendzone thì chuyển sang yêu nhau luôn, mà cặp nào đang yêu
             thì 90% là cưới.
             <figure>
-                <img src=".img/tuyet_tinh_coc.jpg">
+                <img src=".img/images/tuyet_tinh_coc.jpg">
                 <figcaption>Tuyệt tình cốc nhìn từ trên cao(sưu tầm)</figcaption>
 
             </figure>
@@ -119,10 +119,10 @@
         <a href="https://lienminh.garena.vn/">League of Legend</a>
         <p>Mình cũng rất thích động vật, đặc biệt là mèo (có lẽ vì mình tuổi mèo).</p>
         <p>Cùng xem chú mèo mà mình thích nhất nhé =)))</p>
-        <img src=".img/Chú%20mèo%20yêu%20thích.jpg" width="240" height="280" alt="Mèo đen yêu thích">
+        <img src=".img/images/Chú%20mèo%20yêu%20thích.jpg" width="240" height="280" alt="Mèo đen yêu thích">
         <p>Còn đây là đoạn audio mình hay mở khi chơi với nó</p>
         <audio controls>
-            <source src=".img/Circus10529-VA-5631008.mp3" type="audio/mp3">
+            <source src=".img/audios/Circus10529-VA-5631008.mp3">
         </audio>
     </div>
     <div>
