--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <h1>Xin Chào Cô Giáo Và Các Bạn</h1>
     <p>Nhóm chúng em là <strong>Ba Con Sói</strong></p>
-    <img src=".img/Ba_con_soi.jpg" alt="Ba con Sói">
+    <img src=".img/images/Ba_con_soi.jpg" alt="Ba con Sói">
     <p>Hôm nay chúng em sẽ giới thiệu về trang web-demo của cả nhóm.<br>
             Chắc chắn sẽ còn rất nhiều thứ cần sửa để hoàn thiện hơn, mong cô
             và các bạn góp ý và giúp đỡ.
@@ -60,6 +60,6 @@
         sáng tạo của hai sói đệ <strong>Mạnh Kiên</strong>, <strong>Văn Minh</strong>,<br> nhóm chúng em hứa sẽ cố
         gắng hoàn thành tốt nhất nhiệm vụ mà cô giao.
     </p>
-    <img src=".img/soi_dau_dan2.jpg" alt="Sói đầu đàn">
+    <img src=".img/images/soi_dau_dan2.jpg" alt="Sói đầu đàn">
 </body>
 </html>
